# serializer version: 1
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'session_recording_playlist'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.1
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'session_recording_playlist'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.2
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'session_recording_playlist'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.3
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'session_recording_playlist'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.4
  '''
  SELECT COUNT(*)
  FROM
    (SELECT "insights_sessionrecordingplaylist"."id" AS "col1"
     FROM "insights_sessionrecordingplaylist"
     LEFT OUTER JOIN "insights_sessionrecordingplaylistitem" ON ("insights_sessionrecordingplaylist"."id" = "insights_sessionrecordingplaylistitem"."playlist_id")
     WHERE (NOT "insights_sessionrecordingplaylist"."deleted"
            AND "insights_sessionrecordingplaylist"."filters" IS NOT NULL
            AND ("insights_sessionrecordingplaylist"."last_counted_at" IS NULL
                 OR "insights_sessionrecordingplaylist"."last_counted_at" < '2024-01-01 10:00:00+00:00'::timestamptz)
            AND NOT ("insights_sessionrecordingplaylist"."name" IN ('Recordings of Gmail users',
                                                                   'Mobile device recordings',
                                                                   'Recordings with Rage Clicks',
                                                                   'Recordings of people from Google Ads',
                                                                   'Recordings with 5+ console log errors',
                                                                   'All recordings')
                     AND "insights_sessionrecordingplaylist"."name" IS NOT NULL))
     GROUP BY 1
     HAVING COUNT("insights_sessionrecordingplaylistitem"."id") = 99999) subquery
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.5
  '''
  SELECT "insights_sessionrecordingplaylist"."id"
  FROM "insights_sessionrecordingplaylist"
  LEFT OUTER JOIN "insights_sessionrecordingplaylistitem" ON ("insights_sessionrecordingplaylist"."id" = "insights_sessionrecordingplaylistitem"."playlist_id")
  WHERE (NOT "insights_sessionrecordingplaylist"."deleted"
         AND "insights_sessionrecordingplaylist"."filters" IS NOT NULL
         AND ("insights_sessionrecordingplaylist"."last_counted_at" IS NULL
              OR "insights_sessionrecordingplaylist"."last_counted_at" < '2024-01-01 10:00:00+00:00'::timestamptz)
         AND NOT ("insights_sessionrecordingplaylist"."name" IN ('Recordings of Gmail users',
                                                                'Mobile device recordings',
                                                                'Recordings with Rage Clicks',
                                                                'Recordings of people from Google Ads',
                                                                'Recordings with 5+ console log errors',
                                                                'All recordings')
                  AND "insights_sessionrecordingplaylist"."name" IS NOT NULL))
  GROUP BY "insights_sessionrecordingplaylist"."id"
  HAVING COUNT("insights_sessionrecordingplaylistitem"."id") = 99999
  ORDER BY "insights_sessionrecordingplaylist"."last_counted_at" ASC NULLS FIRST
  LIMIT 2500
  '''
# ---
